# aro

./: .env  docker-compose.yml  metro.config.js  package-lock.json  package.json  readme.md  tailwind.config.js
app/: _layout.tsx  index.tsx
app/(tabs)/: _layout.tsx  index.tsx
app/(tabs)/exercise/: _layout.tsx  index.tsx  progress.tsx  templates.tsx
backend/: .air.toml  .gitignore  Dockerfile  Dockerfile.dev  database.go  database.py  food.go  go.mod  go.sum  jwt.go  main.go  main.py  nutrition.go  nutrition_scanner.go  ocr.go  pyproject.toml  record.go  routes.go  server.go  tables.sql  user.go  utils.go  workout.go
components/: container.tsx  exercise_navbar.tsx  graph.tsx  navbar.tsx  optbutton.tsx  workout_views.tsx  workouts.tsx
frontend/: .gitignore  app.json  metro.config.js  package.json  tailwind.config.js
frontend/app/: _layout.tsx  state.ts
frontend/app/(tabs)/: _layout.tsx  events.tsx  index.tsx  period.tsx  settings.tsx  tags.tsx  weight.tsx
frontend/app/(tabs)/exercise/: _layout.tsx  index.tsx  progress.tsx  templates.tsx
frontend/app/(tabs)/food/: _layout.tsx  index.tsx  info.tsx  scan.tsx  search.tsx
frontend/app/(tabs)/nutrition/: _layout.tsx  index.tsx
frontend/components/: container.tsx  elements.tsx  graph.tsx  header.tsx  input.tsx  meal.tsx  navbar.tsx  select.tsx  sync.tsx  tag.tsx  workouts.tsx
frontend/lib/: action.ts  http.ts  plot.ts  state.ts  storage.ts  utils.ts
lib/: state.ts
